add_executable(12-0 12-0.cpp)
add_executable(12-1 12-1.cpp)
add_executable(12-2 12-2.cpp)
add_executable(12-3 12-3.cpp)
add_executable(12-4 12-4.cpp)
add_executable(12-5 12-5.cpp)
add_executable(12-6 12-6.cpp)
add_executable(12-7 12-7.cpp)
add_executable(12-8 12-8.cpp)
add_executable(12-9 12-9.cpp)
